// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Swiper.Body checkGrammar=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body checkGrammar=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body checkHighlight=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body checkHighlight=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body checkSpaces=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body checkSpaces=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body className="my-classname" 1`] = `
<div
  className="uu5-bricks-swiper-body my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Body content=12345 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</div>
`;

exports[`UU5.Bricks.Swiper.Body controlled=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body controlled=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body default props 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body disabled=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body disabled=true 1`] = `
<div
  className="uu5-bricks-swiper-body uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</div>
`;

exports[`UU5.Bricks.Swiper.Body dynamic=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body dynamic=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body hidden=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body hidden=true 1`] = `
<div
  className="uu5-bricks-swiper-body uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body id="myId" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body ignoreHTML=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body ignoreHTML=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body mainAttrs=undefined 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body name="myName" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="bigBox" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="bigBoxCollection" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="box" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="boxCollection" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="container" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="inline" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="page" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="smallBox" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="smallBoxCollection" 1`] = `""`;

exports[`UU5.Bricks.Swiper.Body nestingLevel="spa" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body noIndex=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body noIndex=true 1`] = `
<div
  className="uu5-bricks-swiper-body uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body pureRender=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body pureRender=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body selected=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body selected=true 1`] = `
<div
  className="uu5-bricks-swiper-body uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body textCorrector=false 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body textCorrector=true 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Swiper.Body tooltip="My Tooltip" 1`] = `
<div
  className="uu5-bricks-swiper-body"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
